# ChangeLog for sys-libs/mars
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/mars/ChangeLog,v 1.1 2008/08/23 13:27:42 lu_zero Exp $

*mars-08.06.26 (23 Aug 2008)

  23 Aug 2008; Luca Barbato <lu_zero@gentoo.org> +mars-08.06.26.ebuild:
  First commit
